// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patchViteConfig > should patch the vite config file for lib with components 1`] = `
"import vue from '@vitejs/plugin-vue';
import { defineConfig } from 'vite';
import tailwindcss from '@tailwindcss/vite';
export default defineConfig(() => ({
  root: __dirname,
  cacheDir: '../../../node_modules/.vite/libs/my-ressources',
  plugins: [vue(), tailwindcss()],
  // Uncomment this if you are using workers.
  // worker: {
  //  plugins: [],
  // },
  test: {
    name: 'my-ressources',
    watch: false,
    globals: true,
    environment: 'jsdom',
    setupFiles: ["test-setup.ts"],
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: './test-output/vitest/coverage',
      provider: 'v8' as const,
    },
  },
}));
"
`;

exports[`patchViteConfig > should patch the vite config file for lib without components 1`] = `
"import vue from '@vitejs/plugin-vue';
import { defineConfig } from 'vite';
export default defineConfig(() => ({
  root: __dirname,
  cacheDir: '../../../node_modules/.vite/libs/my-ressources',
  plugins: [vue()],
  // Uncomment this if you are using workers.
  // worker: {
  //  plugins: [],
  // },
  test: {
    name: 'my-ressources',
    watch: false,
    globals: true,
    environment: 'jsdom',
    setupFiles: ["test-setup.ts"],
    include: ['src/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: './test-output/vitest/coverage',
      provider: 'v8' as const,
    },
  },
}));
"
`;
